# ems-dem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
data/: README.md
data/geometry/: box.stl  pipe.stl
examples/: CMakeLists.txt
include/core/: domain.hpp  material.hpp  particle.hpp  vec3.hpp
include/geometry/: mesh.hpp  primitives.hpp  triangle.hpp
include/gpu/: gpu_boundary.hpp  gpu_common.hpp  gpu_forces.hpp  gpu_integrator.hpp  gpu_neighbor.hpp  gpu_particle.hpp
include/io/: vtk_writer.hpp
src/gpu/: gpu_boundary.cpp  gpu_forces.cpp  gpu_integrator.cpp  gpu_neighbor.cpp  gpu_neighbor_optimized.cpp  gpu_particle.cpp  gpu_wall_forces.cpp
tests/: CMakeLists.txt
tests/angle_of_repose/: CMakeLists.txt  angle_of_repose.cpp  angle_of_repose_gpu.cpp
